--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/chanuvasantha" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://github.com/chanakyavasantha" class="facebook"><i class="bi bi-github"></i></a>
+        <a href="https://www.instagram.com/chanakya_vasantha/" class="instagram"><i class="bi bi-instagram"></i> </a>
+        <a href="https://www.linkedin.com/in/chanakya-chowdary-vasantha-081a00222/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -111,7 +111,7 @@
           <p>
             Hello, I'm Chanakya Vasantha, an undergraduate student at IIITDM Kancheepuram majoring in Computer Science with a focus on AI. I hold a commendable CGPA of 8.5 and take pride in my leadership skills.
 
-            My academic journey began in 2021 when I secured a percentile of 98.5, placing me in the top 1.5% among the 10 lakh students who took the exam that year. I wrote my first "Hello World" program in November 2021, marking the initiation of my programming journey in Python. Over a span of 10 days, It took me 10 days through self-learning via online resources like Y
+            My academic journey began in 2021 when I secured a percentile of 98.5, placing me in the top 1.5% among the 10 lakh students who took the exam that year. I wrote my first "Hello World" program in November 2021, marking the initiation of my programming journey in Python. Over a span of 10 days, It took me 10 days through self-learning via online resources like Yt and Google.
 
             Throughout my academic tenure, certain courses sparked my creative thinking and fostered a researcher's mindset. I've undertaken two research projects, with one currently under review and the other in progress.
 
