--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <ul>
           <li><a class="nav-link active" href="#header" style="color: black;">Home</a></li>
           <li><a class="nav-link" href="#about" style="color: black;">About</a></li>
-          <li><a class="nav-link" href="#resume" style="color: black;">Resume</a></li>
-          <li><a class="nav-link" href="#services" style="color: black;">Services</a></li>
+          <li><a class="nav-link" href="#services" style="color: black;">Experience</a></li>
           <li><a class="nav-link" href="#portfolio" style="color: black;">Portfolio</a></li>
           <li><a class="nav-link" href="#contact" style="color: black;">Contact</a></li>
+          <li><a href="https://drive.google.com/file/d/1wutemhLvMu1yOKwogqhOYYbdanXnVgwy/view?usp=drive_link" class="resume-button" download style="color: black;"><i class="bi bi-file-earmark-text" style="color: green;"></i> Download Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
