--- a/index.html
+++ b/index.html
@@ -380,49 +380,33 @@ I have known Chanakya for more than one year. I took his two B. Tech courses and
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class="bx bxl-file"></i></div>
+            <h4><a href="https://www.linkedin.com/in/chanakya-chowdary-vasantha-081a00222/overlay/1635547031240/single-media-viewer/?type=DOCUMENT&profileId=ACoAADgImGEBIUM6SBhQR2A9TsfJlKVy1pEtxls">AI&ML Intern @ ESAB</a></h4>
+            <p>Worked on Cutting Edge Industrial Solutions using AI</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class="bx bxl-file"></i></div>
+            <h4><a href="https://github.com/AICLUB-IIITDM">Founder AI Club IIITDM</a></h4>
+            <p>Founded AI club IIITDM which improved Interest of students towards AI, Collaborated on Projects and events for Industrial Companies</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <h4><a href="">CP Core IIITDM</a></h4>
+            <p>Hosted Events for Competitive Programing, Collaborated with code chef and codeforces for event support.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <h4><a href="">Customer Data Science Intern @ H2o.ai</a></h4>
+            <p>Working on Creating Chatbots for Compliance Data, Also on Person of Interest based on civil and criminal records</p>
           </div>
         </div>
 
