--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/ME.jpeg" rel="icon">
+  <link href="assets/img/ME.jpeg" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -53,7 +53,7 @@
           <li><a class="nav-link active" href="#header" style="color: black;">Home</a></li>
           <li><a class="nav-link" href="#about" style="color: black;">About</a></li>
           <li><a class="nav-link" href="#services" style="color: black;">Experience</a></li>
-          <li><a class="nav-link" href="#portfolio" style="color: black;">Portfolio</a></li>
+          <li><a class="nav-link" href="https://github.com/chanakyavasantha" style="color: black;">Portfolio</a></li>
           <li><a class="nav-link" href="#contact" style="color: black;">Contact</a></li>
           <li><a href="https://drive.google.com/file/d/1wutemhLvMu1yOKwogqhOYYbdanXnVgwy/view?usp=drive_link" class="resume-button" download style="color: black;"><i class="bi bi-file-earmark-text" style="color: green;"></i> Download Resume</a></li>
         </ul>
